<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufabc.padm.projetopadm.view.LoginActivity"
    android:background="@color/colorPrimary">

    <TextView android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_margin_top_title"
        android:text="@string/app_name"
        android:textSize="@dimen/activity_login_appname"
        android:textStyle="bold"
        android:textColor="@color/colorWhite" />

    <EditText android:id="@+id/login_user"
        android:layout_width="@dimen/activity_text_box_width"
        android:layout_height="@dimen/activity_text_box_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_title"
        android:layout_marginTop="@dimen/activity_login_distance_between_text_box_title"
        android:hint="@string/login_text_box_user"
        android:textColorHint="@color/colorTextBox"
        android:inputType="text"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box"
        android:background="@color/colorWhite"
        android:textColor="@color/colorTextBox"/>

    <EditText android:id="@+id/login_password"
        android:layout_width="@dimen/activity_text_box_width"
        android:layout_height="@dimen/activity_text_box_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_user"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/login_text_box_password"
        android:textColorHint="@color/colorTextBox"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box"
        android:background="@color/colorWhite"
        android:textColor="@color/colorTextBox"/>
    
    <Button android:id="@+id/login_button"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_password"
        android:layout_marginTop="@dimen/activity_distance_between_text_box_button"
        android:text="@string/login_button"
        android:gravity="center"
        android:textSize="@dimen/activity_button"
        android:textAllCaps="true"
        android:textColor="@color/colorButton_text"
        android:background="@color/colorWhite"
        android:onClick="signIn"/>

    <TextView android:id="@+id/login_subscript"
        android:layout_width="@dimen/activity_subscript_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_button"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:text="@string/login_subscript"
        android:gravity="center"
        android:textSize="@dimen/activity_subscript"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryLight"
        android:onClick="signUp"/>

    <TextView android:id="@+id/login_subscript2"
        android:layout_width="@dimen/activity_subscript_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_subscript"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:text="@string/login_subscript2"
        android:gravity="center"
        android:textSize="@dimen/activity_subscript"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryLight"
        android:onClick="recoverPassword"/>
</RelativeLayout>
