<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_carteirinha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufabc.padm.projetopadm.view.CreateDocumentActivity">

    <!-- nome do portador do documento -->
    <EditText android:id="@+id/new_carteirinha_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_edit_text_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_new_document_margin_top"
        android:hint="@string/new_document_name"
        android:inputType="textPersonName"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box" />

    <!-- número do documento -->
    <EditText android:id="@+id/new_carteirinha_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_edit_text_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_carteirinha_name"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/new_document_number"
        android:inputType="text"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box" />

    <!-- curso -->
    <EditText android:id="@+id/new_carteirinha_course"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_edit_text_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_carteirinha_number"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/new_document_course"
        android:inputType="text"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box" />

    <!-- universidade -->
    <EditText android:id="@+id/new_carteirinha_university"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_edit_text_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_carteirinha_course"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/new_document_universidade"
        android:inputType="text"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box" />

    <!-- validade -->
    <EditText android:id="@+id/new_carteirinha_validity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_edit_text_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_carteirinha_university"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/new_document_validity"
        android:inputType="date"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box" />

    <!-- imagem -->
    <EditText android:id="@+id/new_carteirinha_image"
        android:layout_width="220dp"
        android:layout_height="@dimen/activity_edit_text_height"
        android:layout_below="@id/new_carteirinha_validity"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/new_document_image"
        android:focusable="false"
        android:inputType="text"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box" />

    <!-- Botão para cadastrar -->
    <Button android:id="@+id/new_carteirinhag_button"
        android:layout_width="@dimen/activity_button2_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_carteirinha_image"
        android:layout_marginTop="@dimen/activity_distance_between_text_box_button"
        android:text="@string/new_document_button"
        android:gravity="center"
        android:textSize="@dimen/activity_button"
        android:textAllCaps="true"
        android:textColor="@color/colorButton2_text"
        android:background="@color/colorButton2_background" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_cartpicture_from_camera"
        android:src="@android:drawable/ic_menu_camera"
        android:background="@color/colorButton2_background"
        android:layout_above="@+id/new_carteirinhag_button"
        android:layout_toRightOf="@+id/new_carteirinhag_button"
        android:layout_toEndOf="@+id/new_carteirinhag_button" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_cartpicture_from_file"
        android:src="@android:drawable/ic_menu_gallery"
        android:background="@color/colorButton2_background"
        android:layout_alignTop="@+id/get_cartpicture_from_camera"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp" />

</RelativeLayout>
