<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufabc.padm.projetopadm.view.RegisterActivity"
    android:background="@color/colorPrimary">

    <!-- Nome -->
    <EditText android:id="@+id/register_name"
        android:layout_width="@dimen/activity_text_box_width"
        android:layout_height="@dimen/activity_text_box_height"
        android:layout_marginTop="@dimen/activity_register_margin_top"
        android:layout_centerHorizontal="true"
        android:hint="@string/register_text_box_name"
        android:textColorHint="@color/colorTextBox"
        android:inputType="textPersonName"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box"
        android:background="@color/colorWhite" />

    <!-- email -->
    <EditText  android:id="@+id/register_email"
        android:layout_width="@dimen/activity_text_box_width"
        android:layout_height="@dimen/activity_text_box_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_name"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/register_text_box_email"
        android:textColorHint="@color/colorTextBox"
        android:inputType="textEmailAddress"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box"
        android:background="@color/colorWhite"
      />

    <!-- user -->
    <EditText  android:id="@+id/register_user"
        android:layout_width="@dimen/activity_text_box_width"
        android:layout_height="@dimen/activity_text_box_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_email"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/register_text_box_user"
        android:textColorHint="@color/colorTextBox"
        android:inputType="textEmailAddress"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box"
        android:background="@color/colorWhite"
        />

    <!-- senha -->
    <EditText android:id="@+id/register_password"
        android:layout_width="@dimen/activity_text_box_width"
        android:layout_height="@dimen/activity_text_box_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_user"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/register_text_box_password"
        android:textColorHint="@color/colorTextBox"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box"
        android:fontFamily="@string/register_text_box_password"
        android:background="@color/colorWhite" />

    <!-- confirma senha -->
    <EditText android:id="@+id/register_confirmPassword"
        android:layout_width="@dimen/activity_text_box_width"
        android:layout_height="@dimen/activity_text_box_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_password"
        android:layout_marginTop="@dimen/activity_distance_between_text_boxes"
        android:hint="@string/register_text_box_confirmPassword"
        android:textColorHint="@color/colorTextBox"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:textSize="@dimen/activity_text_box"
        android:fontFamily="@string/register_text_box_confirmPassword"
        android:background="@color/colorWhite"/>

    <!-- Botão para cadastrar -->
    <Button android:id="@+id/register_button"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_confirmPassword"
        android:layout_marginTop="@dimen/activity_distance_between_text_box_button"
        android:text="@string/register_button"
        android:gravity="center"
        android:textSize="@dimen/activity_button"
        android:textAllCaps="true"
        android:textColor="@color/colorButton_text"
        android:background="@color/colorWhite"/>

</RelativeLayout>
